--- a/img-compress.html
+++ b/img-compress.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Compress images online without losing quality. Reduce file size for web, mobile, and social media.">
+    <meta name="keyword" contect="image compress , optimize image, image optimizer, compress image online,
     <title>ImageOptim - Smart Image Compression Tool</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
