--- a/index.html
+++ b/index.html
@@ -801,14 +801,16 @@
             
             <div class="tools-grid">
                 <!-- Image Tools -->
-                <div class="tool-card">
-                    <div class="tool-image">
-                        <i class="fas fa-compress-alt"></i>
-                    </div>
-                    <div class="tool-info">
-                        <h3>Image Compressor</h3>
-                        <p>Reduce image file size without losing quality. Supports JPG, PNG, WEBP.</p>
-                        <div class="tool-meta">
+                <a href="/img-compress.html" class="tool-card">
+  <div class="tool-image">
+    <i class="fas fa-compress-alt"></i>
+  </div>
+  <div class="tool-info">
+    <h3>Image Compressor</h3>
+    <p>Reduce image file size without losing quality. Supports JPG, PNG, WEBP.</p>
+  </div>
+</a>
+ class="tool-meta">
                             <span class="tool-type">Image</span>
                             <a href="#" class="tool-link">Use Tool <i class="fas fa-arrow-right"></i></a>
                         </div>
