--- a/index.html
+++ b/index.html
@@ -801,7 +801,7 @@
             
             <div class="tools-grid">
                 <!-- Image Tools -->
-                <a href="/https://github.com/saifdeveloper1/Tools/blob/main/img-compress.html" class="tool-card">
+                <a href="/Tools/img-compress.html" class="tool-card">
   <div class="tool-image">
     <i class="fas fa-compress-alt"></i>
   </div>
