--- a/index.html
+++ b/index.html
@@ -826,7 +826,7 @@
         <p>Convert between JPG, PNG, WEBP, GIF and other image formats with high quality.</p>
         <div class="tool-meta">
             <span class="tool-type">Image Tool</span>
-            <a href="https:"/tools/img-convter.html" target="_blank" rel="noopener noreferrer">
+            <a href="https:"img-convter.html" target="_blank" rel="noopener noreferrer">
                 Use Tool <i class="fas fa-arrow-right"></i>
             </a>
         </div>
